--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -469,24 +469,24 @@
         "classwifi": {
             "_comment": "Der obere Abschnitt der Seite.",
             "title": "Klasse, WLAN!",
-            "description": "Für die moderne Bildung ist ein zeitgemäßes Netzwerk die Grundlage. AirZen sorgt für zuverlässiges und sicheres Internet für Schulen. Mit schlüsselfertiger Hardware, schulgerechter Einrichtung, mobiler Nutzerverwaltung, sowie einem rundum-sorglos ITSupport. \n Es braucht also keine IT-Abteilung vor Ort. Aber das Beste an der AirZen Technologie: Der kinderleichte Betrieb. Eben einfach das Netzwerk der nächsten Generation."
+            "description": "Für die moderne Bildung ist ein zeitgemäßes Netzwerk unabdingbar. AirZen sorgt für zuverlässiges und sicheres Internet in Bildungseinrichtungen. Mit schlüsselfertiger Hardware, schulgerechter Einrichtung, mobiler Nutzerverwaltung, sowie einem Rundum-sorglos-IT-Support.\nDas Beste an der AirZen Technologie: der kinderleichte Betrieb. Das Netzwerk der nächsten Generation benötigt somit keine IT-Abteilung vor Ort."
         },
         "reliable": {
             "_comment": "'Zuverlässig' Abschnitt der Seite",
             "tip": "Zuverlässig",
-            "title": "Klassenzimmer digital!",
-            "description": "AirZen hat die Komplettlösung für komplexe Anforderungen von Schulen jeder Art und Größe – und ist dabei kinderleicht zu bedienen. \n Neben lückenloser WLAN-Abdeckung sorgt AirZen auch für eine zuverlässige Netzstabilität, auch wenn viele Geräte online sind. Administratoren können unkompliziert Zugänge ermöglichen und mobil verwalten - ganz einfach vom Handy aus. \n Dazu braucht es keine ITSchulung, denn die Bedienung funktioniert ganz intuitiv über die App. Mit AirZen sorgen Sie für ein erst- klassiges Netz in ihrer Schule.",
+            "title": "Bildung digital!",
+            "description": "AirZen hat die Lösung für komplexe Anforderungen von Bildungseinrichtungen jeder Art und Größe – und ist dabei sehr einfach zu bedienen.\nNeben lückenloser WLAN-Abdeckung sorgt AirZen auch für eine zuverlässige Netzstabilität, auch wenn viele Geräte online sind. Administratoren können unkompliziert Zugänge ermöglichen und mobil verwalten - ganz einfach vom Handy aus.\nDazu braucht es keine IT-Schulung, denn die Bedienung erfolgt intuitiv per App. Mit AirZen sorgen Sie für ein erstklassiges Netz.",
             "list": [
-                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
-                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf",
-                "Sicheres Wlan für Kinder \n inclusive Internet-Filter und Pause Knopf"
+                "Sichere User-Verwaltung \n Passwörter & Rechtevergabe individuell je Nutzer:innen.",
+                "Managed Service \n Schutz & Kontrolle über ihr Netzwerk ohne eigene IT.",
+                "Qualitätssicherung \n Stabile Verbindungen und Kontrolle der Konnektivität."
             ]
         },
         "secure": {
             "_comment": "'Sicher'Abschnitt der Seite",
             "tip": "Sicher",
             "title": "SCHUTZ wird hier großsgeschrieben!",
-            "description": "Von der Grundschule bis zum Hörsaal - im schulischen Netzwerk gibt es viele sensible Daten. AirZen bietet durch die Kombi von hochqualitativem Hersteller- Service und EU- als auch DSGV- konformen Sicherheitskonzepten ein hohes Maß an IT-Sicherheit.  \n Schützen Sie Ihre Schüler und Lehrkräfte zudem mit eigenen WLAN-Passwörtern, Jugendschutzfiltern und separat getrennten Verbindungen.",
+            "description": "Von der Grundschule bis zum Hörsaal - im schulischen Netzwerk gibt es viele sensible Daten. AirZen bietet durch die Kombination von hochqualitativen Hersteller- Service und EU als auch DSGVO konformen Sicherheitskonzepten ein hohes Maß an IT-Sicherheit.\nSchützen Sie Ihre Schüler und Lehrkräfte außerdem mit eigenen WLAN-Passwörtern, Jugendschutzfiltern und separat getrennten Verbindungen.",
             "sparkle1": "EU & DGVO konforme Netzwerklösung inkl. innovativer Fernwartung.",
             "sparkle2": "Automatisierte Updates Sicherheit durch aktuellste Firmware & Security Filter."
         },
@@ -494,7 +494,7 @@
             "_comment": "'Einfach'Abschnitt der Seite",
             "tip": "Einfach",
             "title": "Das kleine Einmaleinfach!",
-            "description": "Laptop raus und loslegen. Mit AirZen bekommen Schüler und Lehrer schnell und spielend einfach Zugang ins Netz über ein Self Service Portal. Damit sich alle auf den Unterricht konzentrieren können, läuft alles andere fast automatisch ab - Von der Einrichtung, bis hin zur Wartung mit selbstlernender Softwarepflege. \n Es braucht also keine große IT-Abteilung oder Fachkenntnisse, dank Hardware und Support direkt vom Hersteller. Oder anders gesagt: Mit AirZen geht die Rechnung auf.",
+            "description": "Laptop raus und loslegen. Mit AirZen bekommen Schüler und Lehrer schnell und spielend einfach Zugang ins Netz über ein Self Service Portal. Damit sich alle auf den Unterricht konzentrieren können, läuft alles andere fast automatisch ab - von der Einrichtung, bis hin zur Wartung mit selbstlernender Software.\nEs braucht also keine große IT-Abteilung oder Fachkenntnisse, dank Hardware und Support direkt vom Hersteller. Oder anders gesagt: Mit AirZen geht die Rechnung auf.",
             "sparkle1": "User-Management WLAN-Verwaltung so leicht wie noch nie zuvor.",
             "sparkle2": "Plug & Play Spielend leichte Installation mit der AirZen App.",
             "sparkle3": "Support Live Chat Direkter Support ohne lange Wartezeiten."
@@ -503,21 +503,35 @@
             "_comment": "Abschnitt 'Unsere Nodes' der Seite",
             "tip": "Technik",
             "title": "Unsere Nodes",
-            "description": "Wifi 6 \n 2 wlan module für Access- und Meshing \n Perfektes roaming mit Apple & Android \n unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Romaing. \n Zero-Setup \n Die AirZen App hilft dir bei der kinderleichten Installation. "
+            "description": "Wifi 6 \n Die neueste WLAN-Technik. \n Perfektes Roaming mit Apple & Android \n Unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Roaming.\n Plug & Play \n Spielend leichte Installation mit der AirZen App."
         }
     },
     "industrial": {
         "everything": {
             "_comment": "Der obere Abschnitt der Seite.",
-            "title": "Alles im Flow halten.",
-            "description": "Durch Stabilität, Sicherheit und einfache Nutzung bieten die AirZen weitreichende Individualisierung für industrielle Netzwerke in vielen Bereichen ganz neue Möglichkeiten Prozesse abzuwickeln, neue Leistungen anzubieten und ganz neue Maßstäbe für Industrie 4.0 zu setzen.",
+            "title": "Lösungs-orientiert.",
+            "description": "Durch Stabilität, Sicherheit und einfache Nutzung bietet AirZen weitreichende Individualisierung für industrielle Netzwerke in vielen Bereichen, ganz neue Möglichkeiten Prozesse abzuwickeln, neue Leistungen anzubieten und ganz neue Maßstäbe für Industrie 4.0 zu setzen.",
             "cooperation": "In vertrauensvoller Kooperation mit:"
         },
         "reliable": {
             "_comment": "'Zuverlässig' Abschnitt der Seite",
             "tip": "Zuverlässig",
-            "title": "Ideen in Serie gebracht",
-            "description": "Alles aus einer Hand - von der Idee bis zur Hardware. Sie brauchen ein zuverlässiges Netzwerk oder haben eine neue Anforderung an ihr Bestehendes? \n Die AirZen Technologien sind für den Einsatz in der Industrie konzipiert und sorgen für ein äußerst effizientes Netzwerk auch bei speziellen, industriellen Anforderungen. Egal ob Automatisierung, smartes Management, Fernsteuerung oder Ferndiagnosen -AirZen entwickelt gemeinsam mit Ihnen eine ideale Netzwerk-Variante. Halten Sie alles am Laufen – mit einer  außergewöhnlich zuverlässigen und stabilen Netzwerkabdeckung von AirZen."
+            "title": "Ideen in Serie.",
+            "description": "Alles aus einer Hand - von der Idee bis zur Hardware. Sie brauchen ein zuverlässiges Netzwerk oder haben eine neue Anforderung an ihr Bestehendes?\nDie AirZen Technologien sind für den Einsatz in der Industrie konzipiert und sorgen für ein äußerst effizientes Netzwerk auch bei speziellen, industriellen Anforderungen. Egal ob Automatisierung, smartes Management, Fernsteuerung oder Fernwartung - AirZen entwickelt gemeinsam mit Ihnen die ideale Netzwerk-Variante, mit einer außergewöhnlich zuverlässigen und stabilen Netzwerkabdeckung.",
+            "hint": [
+                {
+                    "title": "Technologie aus Europa",
+                    "description": "Smarte Netzwerk-Technik für moderne Industrie-Projekte."
+                },
+                {
+                    "title": "Auch für raue Umgebungen",
+                    "description": "Wetterfeste Produkte lassen Sie nicht im Regen stehen."
+                },
+                {
+                    "title": "API Netzwerk-Plattform",
+                    "description": "Netzwerk-Ereignisse & Aktionen per API steuern."
+                }
+            ]
         },
         "referenceproject": {
             "_comment": "'Referenzprojekte' Abschnitt der Seite",
@@ -545,19 +559,33 @@
             "_comment": "'Einfach' Abschnitt der Seite",
             "tip": "Einfach",
             "title": "Einfach Produktiver.",
-            "description": "AirZen bietet Ihnen alles was Sie für den reibungslosen Betrieb brauchen. Profitieren Sie von einer einfachen Einrichtung oder der Integration der ergänzenden Funktionalitäten des Netzwerks, dank automatisierter Infrastruktur zwischen den Routern. Sie erhalten ständigen Zugriff auf alle angeschlossenen Geräte und Maschinen, weltweit und von Zuhause aus. \n Auch entspannt: AirZen ist ein europäisches Unternehmen und hilft Ihnen auch die aktuellen europäisches Datenschutz-Grundverordnung und Anforderungen zu erfüllen. Verwalten Sie alles ganz entspannt über dieselbe Plattform von Router bis IoT-Sensor. Kurzum: Minimieren Sie ihre Aufwand. Steigern Sie ihre Effizienz. Werden Sie ein AirZen."
+            "description": "Ein reibungsloser Betrieb und Lösungen für unmögliche Projekte? AirZen bringt ein hohes Maß an Projekterfahrung ein und konzipiert Netzwerklösungen, die auf ein breites Repertoire an vorhandenen Technologien zurückgreift um Anforderungen individuell und professionell umsetzten.\nAirZen bietet vielseitige Kombinationen aus Soft- und Hardware Komponenten, die das gesamte Spektrum “Internet & Netzwerk” innerhalb industrieller Projekte extrem erleichtert und für eine sichere und zuverlässige Anbindung sorgen.",
+            "hint": [
+                {
+                    "title": "Über 20 Jahre Erfahrung",
+                    "description": "Innovationen entstehen aus gelösten Problemen."
+                },
+                {
+                    "title": "Netz-Werkzeuge",
+                    "description": "Netzwerk ist ein Handwerk, wir haben die Tools dafür."
+                },
+                {
+                    "title": "5G, WiFi, LoRa, Linux",
+                    "description": "Wir sprechen Wireless & Linux, unsere API übersetzt."
+                }
+            ]
         },
         "secure": {
             "_comment": "'Sicher' Abschnitt der Seite",
             "tip": "Sicher",
             "title": "Zukunftsicher statt anno dazumal!",
-            "description": "Der Schutz von Maschinen, Anlagen und Netzwerken erfordert einen aktuellen Stand der Technik. Damit der Betrieb störungsfrei abläuft, unterstützt AirZen mit sicheren Netzwerklösungen. \n Eine direkt integrierte Firewall ermöglicht Schutz vor unberechtigtem Zugriff. Mit eigener Hardware, Servern in Europa und dem Siegel 'Made in Switzerland' steht AirZen für optimalen Schutz. Darüber hinaus haben Sie potenzielle Störungen und Sicherheitsmängel zuverlässig im Blick. Das Netzwerk ist verwertbar über Kommandozeile, API oder App. So behalten Sie sicher den Überblick."
+            "description": "Der Schutz von Maschinen, Anlagen und Netzwerken erfordert einen aktuellen Stand der Technik. AirZen bietet sichere und widerstandsfähige europäische Netzwerk-Management-Lösungen mit einer direkt integrierten Firewall und automatisierten Updates.\nMit eigener Hard- und Software, inklusive Servern in Europa steht AirZen für optimalen Schutz. Darüber hinaus haben Sie potenzielle Störungen zuverlässig im Blick. Das Netzwerk ist verwaltbar per Kommandozeile, API oder App. So behalten Sie sicher den Überblick."
         },
         "ournode": {
             "_comment": "Abschnitt 'Unsere Nodes' der Seite",
             "tip": "Technik",
             "title": "Unsere Nodes",
-            "description": "Wifi 6 \n 2 wlan module für Access- und Meshing \n Perfektes roaming mit Apple & Android \n unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Romaing. \n Zero-Setup \n Die AirZen App hilft dir bei der kinderleichten Installation. "
+            "description": "Wifi 6 \n Die neueste WLAN-Technik. \n Perfektes Roaming mit Apple & Android \n Unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Roaming. \n Plug & Play \n Spielend leichte Installation mit der AirZen App."
         }
     },
     "contactForm": {
