--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -113,6 +113,14 @@
             "subtitle": "High-end network technologies for a relaxed everyday life and working environment. And it is extraordinarily simple, safe and reliable.",
             "send": "Send",
             "description": "I have read the \nprivacy policy\n and agree to the storage and processing of my data by AirZen Networks Lda. \n I agree that my data will be collected and stored electronically to answer my request. I can withdraw my consent at any time: privacy@airzen.io",
+            "nameLabel": "Name*",
+            "namePlaceholder": "Vorname Nachname",
+            "emailLabel": "Email Address*",
+            "emailPlaceholder": "example@email.com",
+            "descPlaceholder": "Ihre Nachricht",
+            "DSGVOLabel": "DSGVO",
+            "successMessage": "Sent successfully.",
+            "failedMessage": "Could not send now. Please try again later.",
             "href": "https://www.plume.com/legal/"
         },
         "menu": "Solutions \n About us \n References \n Contact"
